Add a picture by filling out a form

--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,3 +1,12 @@
 <h1>Add a New Picture</h1>
 
-
+<form action="http://localhost:3000/pictures" method="get">
+  URL: 
+  <input type="text" name="url">
+  Note:
+  <input type="text" name="caption">
+  
+  <p>
+    <input type="submit">
+  </p>
+</form>
