Use POST method to send form data to the create action

--- a/app/views/pictures/new.html.erb
+++ b/app/views/pictures/new.html.erb
@@ -1,6 +1,6 @@
 <h1>Add a New Picture</h1>
 
-<form action="http://localhost:3000/pictures" method="get">
+<form action="http://localhost:3000/pictures" method="post">
   URL: 
   <input type="text" name="url">
   Note:
