--- a/app/views/pictures/index.html.erb
+++ b/app/views/pictures/index.html.erb
@@ -1,9 +1,13 @@
 <h1>List of Pictures</h1>
 
+<%= link_to "Add a New Picture", "/pictures/new" %>
+
 <ul>
 <% @pictures.each do |picture_object| %>
   <li>
-    <img src="<%= picture_object.url %>" width="100" >
+      <%= link_to image_tag(picture_object.url, :width => 100),
+                  "/pictures/#{picture_object.id}"%>
+    
   </li>
 <% end %>
 </ul>
