--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -1,9 +1,3 @@
 <h1>Edit Picture</h1>
 
-<!-- @pic.class  # => pictures -->
-
-<%= form_for @pic do |f| %>
-  <%= f.label :url %> <%= f.text_field :url %>
-  <%= f.label :note %> <%= f.text_field :note %>
-  <p><%= f.submit %></p>
-<% end %>
+<%= render 'form' %>
